# file_store

./: README.md  pyproject.toml
file_store/: __init__.py  file_store.py  key_value_item.py
tests/: test_file_store.py
