[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_store"
authors = [
  {name = "Perry", email = "perryism@gmail.com"},
]
version = "0.1.0"
description = "Embedded key value store in file system"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}